2000-10-21  Mo DeJong  <mdejong@redhat.com>

	* src/native/javaObj.c (JavaObjInit): Fix
	JavaObjInit so that it only inits the global
	data once. Add cmdTypePtrLock mutex to
	protect the global data from multiple threads.

2000-10-09  Mo DeJong  <mdejong@redhat.com>

	* src/xputils/xputils.tcl (appendpath, prependpath):
	Use list command to quote arguments set to uplevel.
	This fixes a bug that caused xputils to fail under Windows.

2000-08-26  Mo DeJong  <mdejong@redhat.com>

	* src/native/javaCmd.c (JavaSetupJava, TclThreadCleanup):
	Move JavaInfo cache into thread local storage. Removed
	javaVM_init_mutex. Create thread exit handler that
	will detach a Tcl thread from the JVM.

2000-08-26  Mo DeJong  <mdejong@redhat.com>

	* src/native/java.h (java, JavaGetCache): Remove
	global java variable, replaced it with JavaGetCache().
	* src/native/javaCmd.c:
	* src/native/javaIdle.c:
	* src/native/javaInterp.c:
	* src/native/javaList.c:
	* src/native/javaNotifier.c:
	* src/native/javaObj.c:
	* src/native/javaTimer.c: Call JavaGetCache() to get
	the JavaInfo pointer for the current thread.

2000-08-26  Mo DeJong  <mdejong@redhat.com>

	* src/native/java.h: Add method that corresponds
	to tcl.lang.Exceptions's constructor to the JavaInfo struct.
	* src/native/javaCmd.c (AddToClassCache, AddToMethodCache,
	AddToFieldCache): Remove the global arrays that were used
	to store class, method, and field signatures. We now init
	the JavaInfo struct by calling methods.

2000-08-23  Jiang Wu  <jwu@cs.stanford.edu>

	* src/tclblend/tcl/lang/Notifier.java (preserve, release,
	queueEvent, deleteEvents, deleteEvent, serviceEvent,
	getAvailableEvent, hasEvents): Fix bugs in Notifier,
	use an internal monitor instead of one on the class
	so that an event that calls vwait does not block
	other events from getting added to the after queue.

2000-08-23  Mo DeJong  <mdejong@redhat.com>

	* src/tests/tcljava/tests/AppendEventQueueThread.java: Add source